--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: '3.3'
 services:
   core:
     build: ./
-    command: python main.py
+    command: python /usr/src/sapienz/main.py
     volumes:
-      - ./:/usr/src/argo/
+      - ./:/usr/src/sapienz/
