--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: '3.3'
 services:
   core:
     build: ./
-    command: python /usr/src/sapienz/main.py
+    command: python /usr/src/sapienz/main.py /usr/src/sapienz/apks
     volumes:
       - ./:/usr/src/sapienz/
